# erp_test

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_10_1624-142c4689580c_init_db.py  2025_08_11_1954-76a49e21591f_add_users_and_task_table.py  2025_08_20_1214-26c8609dd4db_init_schema.py  2025_08_20_1831-287870f9e15e_create_column_update_at_projects_table.py
src/: main.py
src/core/: config.py  database.py  security.py
src/features/: __init__.py
src/features/projects/: model.py  repository.py  routes.py  schemas.py  services.py  use_case.py
src/features/tasks/: models.py  repository.py  routes.py  schemas.py  services.py  use_cases.py
src/features/users/: __init__.py  models.py  repository.py  routes.py  schemas.py  services.py  use_cases.py
src/shared/: base_repository.py  base_schema.py  uow.py
